# opengl-renderer-tests-archived

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  graph.dot
glad/: CMakeLists.txt
glsl/: vertex.glsl
include/: Renderer.hpp  RendererBuffer.hpp  RendererProgram.hpp  Texture.hpp  Vertex.hpp
src/: Renderer.cpp  RendererBuffer.cpp  RendererProgram.cpp  Vertex.cpp  main.cpp
